<resources>
    <!-- Naming convention:
    1. for newAccount activity: new_<attribute>
    2. for settings activity: settings_<attribute>
    -->
    <string name="app_name">Meeple</string>
    <string name="next">Next</string>

    <!-- Register activity (MeepleMain) -->
    <string name="register_title">Register</string>
    <string name="new_account_message">Welcome to Meeple! If you don\'t have an account, please
        register below.</string>
    <string name="new_name">Name</string>
    <string name="new_email_address">Email Address</string>
    <string name="new_confirm_email_address">Confirm Email Address</string>
    <string name="new_password">Password</string>
    <string name="new_confirm_password">Confirm Password</string>
    <string name="new_register">Register</string>
    <string name="new_username">Username</string>

    <!-- Login activity -->
    <string name="login">Login</string>
    <string name="login_title">Login</string>
    <string name="have_account_clickable">Already have an account? Login here!</string>
    <string name="title_activity_login">Login</string>
    <string name="dont_have_account_message">Don\'t have an account? Register here!</string>
    <string name="forgot_password">Forgot your password? Click here!</string>
    <string name="have_google_account_clickable">Have a Google account? Login here!</string>

    <!-- Forgot Password Activity -->
    <string name="recover_your_password">Recover your Password</string>
    <string name="send_email_forgot_password">Send Email</string>
    <string name="toast_recovery_email">Recovery Email Sent!</string>
    <string name="forgot_password_send_confirmation_email">"Forgot your password? Send a confirmation email to change it!"</string>

    <!-- Local Feed Fragment -->
    <string name="title_local_feed_fragment">Local Feed</string>
    <string name="title_map_fragment">My Location</string>
    <string name="change_radius_alert_title">Change Your Radius</string>
    <string name="change_radius_alert_message">Enter a New Radius</string>

    <!-- New Post Activity -->
    <string name="new_post_going">Going</string>
    <string name="post">Post</string>
    <string name="new_post_header">Write a new post here!</string>
    <string name="new_post_title">New Post</string>
    <string name="new_post_event_title">Event Title</string>
    <string name="new_post_date">Date and Time</string>
    <string name="new_post_location">Event Location</string>
    <string name="new_post_description">Event Description</string>
    <string name="date_picker_title">Select the Date:</string>
    <string name="time_picker_title">Select the Time:</string>
    <string name="confirm_date_and_time_title">Is this correct?</string>

    <!-- View Post Activity -->
    <string name="view_post_title">View Post</string>

    <!-- Settings activity -->
    <string name="settings_title">Settings</string>
    <string name="option_change_password">Change Password</string>
    <string name="option_logout">Log Out</string>
    <string name="account_settings">Account Settings</string>
    <string name="option_change_username">Change Username</string>
    <string name="option_change_email">Change Email</string>
    <string name="change_email_desc">Change your email address</string>
    <string name="change_username_desc">Change your username</string>
    <string name="change_password_desc">Change your password</string>
    <string name="change_radius_desc">Change your local posts radius</string>


    <!-- Errors -->
    <string name="error_email_already_exists">An account already exists with this email!</string>
    <string name="error_passwords_do_not_match">Passwords do not match!</string>
    <string name="error_invalid_email">Please enter a valid email.</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_login_unsuccessful">Username or password is incorrect</string>
    <string name="error_password_too_short">The password must be at least 6 characters long!</string>
    <string name="error_location_not_supported">Your device does not support location services at this time.</string>
    <string name="error_please_enable_locations">Please enable location services on your device</string>
    <string name="error_date_not_valid">Please enter a valid date</string>

    <!-- Other -->
    <string name="login_id_token">785497003186-vmck9mce8a77qju1ilq1sci0cjeg9guu.apps.googleusercontent.com</string>
    <string name="test_map">Map Fragment</string>
    <string name="test_local_feed">Local Feed Fragment</string>
    <string name="test_swiping">Test Swiping</string>
    <string name="three_dots">three dots</string>
    <string name="Logout">Logout</string>
    <string name="title_activity_maps">Map</string>

    <!-- Chat Activity -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_a_message">Send a message</string>
    <string name="send_button_title">SEND</string>
    <string name="theme_title">Theme</string>
    <string name="settings_theme_summary">Change Your Theme</string>


</resources>
